<resources>
    <string name="app_name">myTa</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="announcement">Announcement</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="krs_unand_logo">KRS - UNAND</string>
    <string name="semester_ganjil_logo">Semester Ganjil</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="topic">Topic</string>
    <string name="cancel">Cancel</string>
    <string name="period">Period</string>
    <string name="default_value">-</string>
</resources>